# BirdCLEF2024

./: .gitignore  pyproject.toml
birdclef2024/criterion/: distillation.py
birdclef2024/models/: baseline.py  distillation.py
birdclef2024/optim/: lr_scheduler.py
birdclef2024/utils/: __init__.py
birdclef2024/utils/data/: __init__.py  _download.py  collator.py  composer.py  dataset.py  sampler.py
birdclef2024/utils/driver/: __init__.py  base.py  distillation.py
birdclef2024/utils/kaggle/: __init__.py
recipes/AST/: README.md  run.sh  submit.sh  test.sh  train.sh
recipes/AST/local/: submit.py
recipes/Baseline/: README.md  preprocess.sh  run.sh  submit.sh  test.sh  train.sh
recipes/Baseline/local/: save_features.py  save_list.py  save_unlabeled_features.py  save_unlabeled_list.py  submit.py  test.py  train.py
recipes/Distillation/: README.md  run.sh  train.sh
recipes/Distillation/local/: test.py  train.py
recipes/MultiDataset/: README.md  preprocess.sh  preprocess_2021.sh  preprocess_2022.sh  preprocess_2023.sh  preprocess_2024.sh  run.sh  train.sh  unify_datasets.sh
recipes/MultiDataset/local/: save_2021_list.py  save_2022_list.py  save_2023_list.py  select_samples.py
recipes/MultiDatasetPretrain/: README.md  finetune.sh  preprocess.sh  preprocess_2021.sh  preprocess_2022.sh  preprocess_2023.sh  preprocess_2024.sh  pretrain.sh  run.sh  train.sh  unify_datasets.sh
recipes/MultiDatasetPretrain/local/: save_2022_list.py  save_2023_list.py  select_samples.py
recipes/_common/: parse_run_command.py  preprocess.sh
(+95 files in other folders)
